--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Surprise for Esha</title>
+    <title>Surprise for 4.9</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Special Message for Esha</h1>
+    <h1>Special Message for 4.9</h1>
     <button id="revealButton" onclick="revealMessage()">Click to Reveal</button>
-    <p id="hiddenMessage" class="hidden">I love you, Esha! 😊</p>
+    <p id="hiddenMessage" class="hidden">I don't hate you, 4.9! 😊</p>
 </div>
 
 <script src="script.js"></script>
